Bug 148565 - FILESAVE: DOCX: Highlight lost after RT
Summary: FILESAVE: DOCX: Highlight lost after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-04-13 12:35 UTC by Xisco Faulí
Modified: 2022-04-20 09:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Before vs After the RT (137.25 KB, image/png)
2022-04-13 12:35 UTC, Xisco Faulí
Details
урок 18B.docx: minimized version (15.73 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-04-19 12:36 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-04-13 12:35:58 UTC
Created attachment 179524 [details]
Before vs After the RT

Steps to reproduce:
1. Open attachment 57658 [details] from bug 46643
2. Save it to DOCX
3. Reopen

-> The highlight on top is gone

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 9877a0190e43241f4a5102e5d9cc7181f91d5a6f
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-04-13 12:37:04 UTC
Regression introduced by:

author	Justin Luth <justin_luth@sil.org>	2022-01-20 13:33:15 +0200
committer	Justin Luth <jluth@mail.com>	2022-01-27 19:13:45 +0100
commit 46b62f7777c6acdc2c94dc4b2ab79d38a10c49f9 (patch)
tree 852494f6e01a0147e47a5883d26ad078b2c42705
parent 67478f9d637096781c9e3df64896b1ddaccc331b (diff)
v2 tdf#134951 docxexport: don't lose postponed comment

Bisected with: bibisect-linux64-7.4

Adding Cc: to Justin Luth
Comment 2 Justin L 2022-04-19 12:36:25 UTC
Created attachment 179664 [details]
урок 18B.docx: minimized version
Comment 3 Commit Notification 2022-04-19 19:06:46 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/76de78c338fd508c21289ff2edab80fc4f5d8c23

tdf#148565 sw ms export: a new run can't be postponed-started

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2022-04-20 09:16:53 UTC
Verified in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 8e4453c2117b6c3bb15be6b949a0a8a43df66647
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Justin, thanks for fixing this issue!!