tdf#148565 sw ms export: a new run can't be postponed-started

This fixes a LO 7.4 regression from
commit 46b62f7777c6acdc2c94dc4b2ab79d38a10c49f9.

A make check with an assert indicated the following
existing unit tests matched - but they had no noticable
char run content to test against.
ooxmlexport6's testShapeThemePreservation
ooxmlexport7's testBnc884615
ooxmlexport9's testTdf90789
ooxmlexport10's testTdf90153
ooxmlexport11's testTdf137655
ooxmlexport14's testTdf131539
ooxmlexport15's testTdf138739
ooxmlexport17's testTdf126287

Change-Id: Iae89ff1f6de06bfe37b886e1e39e8457157ae240